// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreditList Component > displays the no data when credits in empty 1`] = `
<div>
  <section
    class="overflow-hidden mb-4"
  >
    <div
      class="text-white mx-auto max-w-screen-xl px-8 py-2 sm:py-4 lg:py-8"
    >
      <h2
        class="text-lg sm:text-xl lg:text-2xl font-bold mb-4"
      >
        Test Title
         
        <span
          class="text-gray-300"
        >
          (
          0
          )
        </span>
      </h2>
      <div
        class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 gap-y-8"
      />
      <div
        data-testid="ListNoData"
      />
    </div>
  </section>
</div>
`;

exports[`CreditList Component > renders correctly 1`] = `
<div>
  <section
    class="overflow-hidden mb-4"
  >
    <div
      class="text-white mx-auto max-w-screen-xl px-8 py-2 sm:py-4 lg:py-8"
    >
      <h2
        class="text-lg sm:text-xl lg:text-2xl font-bold mb-4"
      >
        Test Title
         
        <span
          class="text-gray-300"
        >
          (
          2
          )
        </span>
      </h2>
      <div
        class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 gap-y-8"
      >
        <div
          data-testid="CreditItem"
        />
        <div
          data-testid="CreditItem"
        />
      </div>
    </div>
  </section>
</div>
`;
